sources/easygenerator.Web/Content/common.less
/* ... */
body {
    font-family: 'Open Sans', sans-serif;
    background-color: rgb(243, 247, 249);
    height: 100%;
    width: 100%;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

input[type="radio"],
input[type="checkbox"] {
    margin: 0;
}

input[type="password"]::-ms-reveal {
    visibility: hidden;
}

input::-ms-clear {
    visibility: hidden;
}

:focus,
:active {
    outline: none;
}

a {
    outline: 0;
    text-decoration: none;

    &:hover, &:active {
        outline: 0;
    }

    &:focus {
        text-decoration: none;
    }
}

h1 {
    font-size: 2.0em;
}

img:hover {
    opacity: 1;
}

/*#endregion COMMON*/

/*#region COMMON CLASSES CSS-STYLES*/

.clear {
    clear: both;
}

.clearfix:after {
    content: "";
    display: block;
    clear: both;
}

.pull-left {
    float: left;
}

.pull-right {
    float: right;
}

.unstyled {
    list-style: none;
}

.selectable {
    -moz-user-select: text;
    -webkit-user-select: text;
    -ms-user-select: text;
}

.bold {
    font-family: 'OpenSans-Semibold';
}

.preloader-block {
    height: 1px;
    width: 1px;
    position: absolute;
    overflow: hidden;
    visibility: hidden;
}

.tb-row {
    display: table-row;
    vertical-align: top;
}

.tb-cell {
    display: table-cell;
    vertical-align: top;

    & > .colspan-cell {
        width: 100%;
        position: absolute;
    }
}

.onboarding-flex-wrapper {
    display: inline-flex;
    flex: 0 0 auto;
}

/*#endregion COMMON CLASSES CSS-STYLES*/

/*#region STYLED CONTENT*/
@main-style-color: #43aaa3;
@highlighted-font-color: #fff;
@main-text-color: #42515f;

.margin-bottom() {
    &:not(:last-child) {
        margin-bottom: 15px;
    }
}

.styled-content {
    padding: 15px 20px;
    font: 18px 'Heuristica-Regular';
    line-height: 1.5;
    overflow-y: hidden;
    overflow-x: auto;
    color: @main-text-color;

    h1, h2, h3 {
        font-family: 'Heuristica-Bold';
        font-weight: normal;
        .margin-bottom;
    }

    h1 {
        font-size: 24px;
    }

    h2 {
        font-size: 22px;
    }

    h3 {
        font-size: 20px;
    }

    p, ul, ol {
        .margin-bottom;
    }

    ul, ol {
        padding-left: 32px;
        list-style: none;

        h1, h2, h3, p {
            display: inline;
        }
    }

    ol {
        counter-reset: ol-counter;

        & > li {
            position: relative;
            .margin-bottom;

            &:before {
                content: counter(ol-counter) '.';
                counter-increment: ol-counter;
                display: inline-block;
                width: 58px;
                margin-left: -58px;
                text-align: right;
                padding-right: 12px;
                box-sizing: border-box;
            }
        }
    }

    ul {
        & > li {
            position: relative;
            .margin-bottom;

            &:before {
                content: '';
                display: inline-block;
                margin: 0 20px 0 -25px;
                width: 5px;
                height: 5px;
                border-radius: 50%;
                vertical-align: middle;
                background-color: @main-style-color;
            }
        }
    }

    em {
        font-family: 'Heuristica-Italic';
        font-style: normal;

        strong {
            font-family: 'Heuristica-BoldItalic';
        }
    }

    strong {
        font-family: 'Heuristica-Bold';
        font-weight: normal !important;

        em {
            font-family: 'Heuristica-BoldItalic';
        }
    }

    img {
        margin: 30px auto 20px;
        border-radius: 3px;
        display: block;
    }

        img[style*="float:left"],
        img[style*="float: left"] {
            margin-top: 10px;
            margin-right: 30px;
            clear: both;
        }

        img[style*="float:right"],
        img[style*="float: right"] {
            margin-top: 10px;
            margin-left: 30px;
            clear: both;
        }

        img[style*="float:left"] ~ img[style*="float:left"], img[style*="float: left"] ~ img[style*="float:left"], img[style*="float:left"] ~ img[style*="float: left"], img[style*="float: left"] ~ img[style*="float: left"] {
            clear: none;
        }

        img[style*="float:right"] ~ img[style*="float:right"], img[style*="float: right"] ~ img[style*="float:right"], img[style*="float:right"] ~ img[style*="float: right"], img[style*="float: right"] ~ img[style*="float: right"] {
            clear: none;
        }

        img:first-child {
            margin-top: 10px;
        }

    cite {
        border-left: solid 4px @main-style-color;
        display: block;
        font-family: 'Heuristica-Italic';
        white-space: pre-line;
        padding-left: 18px;
        margin: 20px 15% 20px 10px;
    }

    a {
        color: @main-style-color;
        border-bottom: 1px solid @main-style-color;

        &:hover, &:active, &:focus {
            color: shade(@main-style-color,10%);
            border-bottom-color: shade(@main-style-color,10%);
        }
    }

    mark {
        background-color: @main-style-color;
        color: @highlighted-font-color;
    }

    table {
        margin: 20px auto;
        border: none;
        border-collapse: collapse;
        font-size: 16px;
        color: #3c3c3c;
        table-layout: fixed;

        p {
            margin: 0;
        }
    }

    th, td {
        border: 1px dashed #ccc;
        overflow: hidden;
        padding: 10px 15px;
        text-align: left;
    }

    th {
        background-color: #76cbe3;
        font-family: 'Heuristica-Bold';
    }

    tr {
        background-color: #f4fafc;
    }

    strong, th {
        font-weight: normal;
    }
}

.cke_widget_wrapper img {
    margin: 0;
}
/* ... */

